Fix to fit mobile screen-width, shorten footer text.
- shorten footer text to avoid problem of not enough space to layout all icons.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -11,7 +12,7 @@
 		<div class="footer">
 			<div class="footer-text">
 				Wasin Thonkaew <span class="code">haxpor</span><br/>
-				Independent developer making games and software.<br/>
+				Make games and softwares<br/>
 				<a href="https://github.com/haxpor">
 					<span class="icon icon--github">
 						<svg viewBox="0 0 16 16">
