Update tagline at the bottom

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="footer">
 			<div class="footer-text">
 				Wasin Thonkaew <span class="code">haxpor</span><br/>
-				Make games and softwares<br/>
+				Make games and web apps<br/>
 				<a href="https://github.com/haxpor">
 					<span class="icon icon--github">
 						<svg viewBox="0 0 16 16">
