Update personal icon. Fix vertical-pos of icon.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<a href="https://wasin.io/dashboard"><img src="assets/images/haxpor.jpg" width="128px" class="haxpor-img"/></a>
-			<a href="https://abzi.co/"><img src="assets/images/abzico.png" width="128px" class="abzico-img"/></a>
+			<a href="https://wasin.io/dashboard"><img src="assets/images/haxpor.png" class="haxpor-img"/></a>
+			<a href="https://abzi.co/"><img src="assets/images/abzico.png" class="abzico-img"/></a>
 		</div>
 		<div class="footer">
 			<div class="footer-text">
