Add animation transition
A few of core solutions used here are grabbed from stackoverflow with
custom modification for cross-platform.

Yes, no jquery!

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 	<head>
 		<title>Wasin | Haxpor | Abzi.co</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
-		<div class="wrapper">
-			<a href="https://wasin.io/dashboard"><img src="assets/images/haxpor.png" class="haxpor-img"/></a>
-			<a href="https://abzi.co/"><img src="assets/images/abzico.png" class="abzico-img"/></a>
-		</div>
+    <div class="header">
+      <span id="blog-button" class="button">Blog</span>
+      <span id="games-button" class="button">Games</span>
+      <span id="tech-button" class="button">Tech</span>
+    </div>
+    <div class="paths-section" id="paths-section">
+      <a href="https://wasin.io/dashboard"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
+      <a href="https://abzi.co/"><img src="assets/images/abzico.png" class="abzico-img anim-comeinright"/></a>
+    </div>
+    <div id="blog-section">
+      blog section
+    </div>
+    <div id="games-section">
+      games section
+    </div>
+    <div id="tech-section">
+      tech section
+    </div>
 		<div class="footer">
 			<div class="footer-text">
 				Wasin Thonkaew <span class="code">haxpor</span><br/>
@@ -41,6 +55,7 @@
 		      </span>
 		    </a>
 			</div>
-		</div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
