Add grid showcase for games and tech section with hovering effect.
Laid out the structure of the page with necessary effect i.e. hovering,
link, etc.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,93 @@
       <span id="tech-button" class="button">Tech</span>
     </div>
     <div class="paths-section" id="paths-section">
-      <a href="https://wasin.io/dashboard"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
-      <a href="https://abzi.co/"><img src="assets/images/abzico.png" class="abzico-img anim-comeinright"/></a>
+      <a href="https://wasin.io/dashboard" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
+      <a href="https://abzi.co/" class="no-decoration"><img src="assets/images/abzico.png" class="abzico-img anim-comeinright"/></a>
     </div>
-    <div id="games-section">
-      games section
+    <div id="games-section" class="wrapper-section">
+      <h1>Games</h1>
+      <div class="row">
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/raceplant.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/raceplant/');">
+          <div class="project-meta">
+            <h1>Raceplant</h1>
+            <label>CIGA 48hrs game jam</label>
+          </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/zombiehero.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/zombie-hero-revenge-of-kiki/');">
+          <div class="project-meta">
+              <h1>Zombie Hero: Revenge of Kiki</h1>
+              <label>iOS</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6  overlay" style="background-image: url('/assets/images/games/realko.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/realko/');">
+          <div class="project-meta">
+              <h1>Realko</h1>
+              <label>Contract</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/tank.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/tank/');">
+          <div class="project-meta">
+              <h1>Tank</h1>
+              <label>Experiemental</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/cld1.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/cld1/');">
+          <div class="project-meta">
+              <h1>CLD1</h1>
+              <label>Charity game jam</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/trois.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/trois/');">
+          <div class="project-meta">
+              <h1>Trois</h1>
+              <label>Ludumdare 25</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/junkmaster-1.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/junk-master-the-journey-to-junk-lord/');">
+          <div class="project-meta">
+              <h1>Junk Master : The Journey to Junk Lord</h1>
+              <label>PC (Windows)</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/junkmaster-2.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/junk-master-the-quest-to-glory/');">
+          <div class="project-meta">
+              <h1>Junk Master : The Quest to Glory</h1>
+              <label>Windows Phone</label>
+            </div>
+        </div>
+        <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/junkmaster-3.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/junk-master-the-mission-of-recovery/');">
+          <div class="project-meta">
+              <h1>Junk Master : The Mission of Recovery</h1>
+              <label>Facebook Game</label>
+            </div>
+        </div>
+      </div>
+      <div class="section-footnote">see <a href="https://blog.wasin.io/games/">more</a>?</div>
+      <hr>
     </div>
-    <div id="tech-section">
-      tech section
+    <div class="section-separator"></div>
+    <div id="tech-section" class="wrapper-section">
+      <h1>Tech</h1>
+      <div class="row">
+          <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/raceplant.png');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/raceplant/');">
+            <div class="project-meta">
+              <h1>Raceplant</h1>
+              <label>CIGA 48hrs game jam</label>
+            </div>
+          </div>
+          <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/zombiehero.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/zombie-hero-revenge-of-kiki/');">
+            <div class="project-meta">
+                <h1>Zombie Hero: Revenge of Kiki</h1>
+                <label>iOS</label>
+              </div>
+          </div>
+          <div class="slot-section col-4 col-m-6 overlay" style="background-image: url('/assets/images/games/zombiehero.jpg');" onclick="delayGotoProductURL('https://blog.wasin.io/products/games/zombie-hero-revenge-of-kiki/');">
+            <div class="project-meta">
+                <h1>Zombie Hero: Revenge of Kiki</h1>
+                <label>iOS</label>
+              </div>
+          </div>
+        </div>
     </div>
 		<div class="footer">
 			<div class="footer-text">
