Cut out dashboard (we don't really need it)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <span id="tech-button" class="button">Tech</span>
     </div>
     <div class="paths-section" id="paths-section">
-      <a href="https://wasin.io/dashboard" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
+      <a href="https://blog.wasin.io/" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
       <a href="https://abzi.co/" class="no-decoration"><img src="assets/images/abzico.png" class="abzico-img anim-comeinright"/></a>
     </div>
     <div id="games-section" class="wrapper-section">
