Add twitch linked icon at footer

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
 			<div class="footer-text">
 				Wasin Thonkaew <span class="code">haxpor</span><br/>
 				Make games and web apps<br/>
+                <a href='https://www.twitch.tv/haxpor_' class="no-decoration" target='_blank'>
+                  <span class="icon">
+                    <img src='assets/images/twitch.png' width="32px" height="32px"/>
+                  </span>
+                </a>
 				<a href="https://github.com/haxpor" class="no-decoration">
 					<span class="icon icon--github">
 						<svg viewBox="0 0 16 16">
