update to new dumb style avatar image, and favicon

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <span id="tech-button" class="button">Tech</span>
     </div>
     <div class="paths-section" id="paths-section">
-      <a href="https://blog.wasin.io/" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
-      <a href="https://abzi.co/" class="no-decoration"><img src="assets/images/abzico.png" class="abzico-img anim-comeinright"/></a>
+      <a href="https://wasin.io/blog" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
+      <a href="https://github.com/haxpor" class="no-decoration"><img src="assets/images/wasin-dumb-style.jpg" class="abzico-img anim-comeinright"/></a>
     </div>
     <div id="games-section" class="wrapper-section">
       <h1>Games</h1>
@@ -104,7 +104,7 @@
 		<div class="footer">
 			<div class="footer-text">
 				Wasin Thonkaew <span class="code">haxpor</span><br/>
-				Make games and web apps<br/>
+				GameDev, Linux, Open source<br/>
                 <a href='https://www.twitch.tv/haxpor_' class="no-decoration" target='_blank'>
                   <span class="icon">
                     <img src='assets/images/twitch.png' width="32px" height="32px"/>
