fix css class as there is no abzi.co website anymore

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Wasin | Haxpor | Abzi.co</title>
+		<title>Wasin | Haxpor</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -13,7 +13,7 @@
     </div>
     <div class="paths-section" id="paths-section">
       <a href="https://wasin.io/blog" class="no-decoration"><img src="assets/images/haxpor.png" class="haxpor-img anim-comeinleft"/></a>
-      <a href="https://github.com/haxpor" class="no-decoration"><img src="assets/images/wasin-dumb-style.jpg" class="abzico-img anim-comeinright"/></a>
+      <a href="https://github.com/haxpor" class="no-decoration"><img src="assets/images/wasin-dumb-style.jpg" class="haxpor-another-img anim-comeinright"/></a>
     </div>
     <div id="games-section" class="wrapper-section">
       <h1>Games</h1>
